--- a/mysql-svc.yml
+++ b/mysql-svc.yml
@@ -1,12 +1,12 @@
-apiVersion:v1
-kind:service
+apiVersion: v1
+kind: Service
 metadata:
-  name:mysql_svc
+  name: mysqlsvc
 spec:
   selector:
-     app:mysql
+     app: mysql
   ports:
-    -name:mysql
-     port:3306
-     targetPort:3306
-     protocol:TCP
+    - name: mysql
+      port: 3306
+      targetPort: 3306
+      protocol: TCP
