--- a/ocs-svc.yml
+++ b/ocs-svc.yml
@@ -1,16 +1,14 @@
-apiVersion:v1
-kind:service
+apiVersion: v1
+kind: Service
 metadata:
-   name:red
+   name: red
 spec:
   selector:
-      app:ocs_server
-  type:nodePort
+      app: ocsserver
+  type: NodePort
   ports:
-    -name:ocs_http
-     nodePort:80
-     port:80
-     targetPort:80
-     protocol:TCP
-
-
+    - name: ocshttp
+#      nodePort: 80
+      port: 80
+      targetPort: 80
+      protocol: TCP
